feat: add caffeine cache for spring cloud loadbalancer

--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,10 @@
+spring:
+  cloud:
+    loadbalancer:
+      cache:
+        enabled: true
+        caffeine:
+          spec: initialCapacity=100,maximumSize=500,expireAfterAccess=600s,expireAfterWrite=600s
 eureka:
   instance:
     prefer-ip-address: true
