--- a/application.yml
+++ b/application.yml
@@ -13,3 +13,7 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+info:
+  app:
+    name: ${spring.application.name}
+    version: ${spring.application.version}
